--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 	canvas.height = window.getComputedStyle(container).height.replace('px', '');
 
 
-	var SW = new Siriwave({
+	var SW = new Siriwave.Siriwave({
 		canvas: canvas,
 		autostart: true
 	});
@@ -129,7 +129,7 @@
 	canvas.width = window.getComputedStyle(container).width.replace('px', '');
 	canvas.height = window.getComputedStyle(container).height.replace('px', '');
 
-	var SW9 = new Siriwave({
+	var SW9 = new Siriwave.Siriwave({
 		style: "ios9",
 		canvas: canvas,
 		autostart: true
